upload source code

--- a/index.html
+++ b/index.html
@@ -488,7 +488,9 @@
             <div class="image">
               <img src="images/blog-1.jpg" alt="" />
               <div class="icons">
-                <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2022 </a>
+                <a href="#">
+                  <i class="fas fa-calendar"></i> 21st January, 2022
+                </a>
                 <a href="#"> <i class="fas fa-user"></i> by haitn </a>
               </div>
             </div>
@@ -511,7 +513,9 @@
             <div class="image">
               <img src="images/blog-2.jpg" alt="" />
               <div class="icons">
-                <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2022 </a>
+                <a href="#">
+                  <i class="fas fa-calendar"></i> 21st January, 2022
+                </a>
                 <a href="#"> <i class="fas fa-user"></i> by haitn</a>
               </div>
             </div>
@@ -534,7 +538,9 @@
             <div class="image">
               <img src="images/blog-3.jpg" alt="" />
               <div class="icons">
-                <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2022 </a>
+                <a href="#">
+                  <i class="fas fa-calendar"></i> 21st January, 2022
+                </a>
                 <a href="#"> <i class="fas fa-user"></i> by haitn </a>
               </div>
             </div>
