--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
               >
                 <i class="fas fa-map"></i>
                 <h3>address :</h3>
-                <p>mumbai, india - 400104</p>
+                <p>Phú Hưng, Cái Nước, Cà Mau</p>
               </div>
 
               <div
@@ -404,8 +404,8 @@
               >
                 <i class="fas fa-envelope"></i>
                 <h3>email :</h3>
-                <p>shaikhanas@gmail.com</p>
-                <p>anasbhai@gmail.com</p>
+                <p>tngochai0205@gmail.com</p>
+                <p>tngochai@gmail.com</p>
               </div>
 
               <div
@@ -417,7 +417,7 @@
                 <i class="fas fa-phone"></i>
                 <h3>phone :</h3>
                 <p>+123-456-7890</p>
-                <p>+111-222-3333</p>
+                <p>+0853-318-808</p>
               </div>
             </div>
 
